<resources>
    <string name="app_name">Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="account">校园网账号</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="request_username">请输入校园网账号</string>
    <string name="request_password">请输入密码</string>
    <string name="API_version">v1</string>
    <string name="import_selector_dialog_title">导入课表</string>

    <string name="toolbar_title_main">未知学期</string>
    <string name="toolbar_title_student_signlog">我的签到记录</string>
    <string name="toolbar_title_student_leavelog">我的请假记录</string>
    <string name="toolbar_title_lesson_signlog">课程考勤</string>
    <string name="toolbar_title_lesson_leavelog">请假管理</string>

    <!--<string name="base_url">http://192.168.1.106:5000</string>-->
    <string name="base_url">http://10.21.30.35:5000</string>

    <string name="home_page">首页</string>
    <string name="chat_room">汕大广场</string>

    <string name="drawer_signlog">我的签到记录</string>
    <string name="drawer_leavelog">我的请假记录</string>

    <string name="setting_page">设置</string>
    <string name="suggestion_page">意见反馈</string>

    <string name="about">关于</string>

    <string name="exit">注销</string>

    <string name="lesson_homepage_page1">学生列表</string>
    <string name="lesson_homepage_page2">讨论区</string>
    <string name="lesson_homepage_page3">作业区</string>

    <string name="bottom_sheet_01">导入课表</string>
    <string name="bottom_sheet_02">设置课表为默认课表</string>
    <string name="bottom_sheet_03">清除默认课表</string>

    <string name="other_leave_type">其他</string>
    <string name="sick_leave_type">病假</string>
    <string name="affair_leave_type">事假</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="lesson_search_dialog_button">查找</string>
    <string name="lesson_search_dialog_hint">请先查找到相应课程再添加</string>

    <string name="bind_device_alert">检测到当前设备还没有绑定账号,是否绑定当前账号？\n\n注意：一个设备只能绑定一个账号,绑定设备与签到关联，请谨慎操作!!</string>

    <string name="about_dialog_title">关于Assistant</string>
    <string name="about_dialog_content">Assistant  教师上课辅助App\n\n开发者: 12电子 蔡锐深</string>

    <!--chat room-->
    <string name="hello_world">Hello world!</string>
    <string name="client_id_title">clientId</string>
    <string name="client_id_desc">每一个终端称为一个 client。\n Client 拥有一个在应用内唯一标识自己的 id。\n 这个 id 由应用自己定义</string>
    <string name="conversation_desc">开始聊天之前，需要先创建或者加入一个对话，然后再邀请其他人进来，之后所有参与者在这个对话内进行交流。</string>
    <string name="welcome">您好 </string>
    <string name="create_conversation">创建一个和机器人的对话</string>
    <string name="join_conversation">加入一个已有对话</string>
    <string name="online_site">http://leancloud.github.io/js-realtime-sdk/demo/demo2/</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logout">注销</string>
    <string name="begin_chat">开始聊天</string>
    <string name="otherId_input_hint">请输入对方的 clientId</string>


    <string name="square_name">汕大广场</string>
    <string name="square_member_title">在线成员列表</string>
    <string name="login">进入聊天室</string>
    <string name="login_null_name_tip">请输入用户名</string>

    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="message_is_null">消息不能为空</string>
</resources>
