<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:genius="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/app_primary"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="45dp"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/loginactivity_logo_from_login"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                    <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="25dp"
                        android:hint="@string/password"
                        android:imeActionId="@integer/login_id"
                        android:imeOptions="actionGo"
                        android:imeActionLabel="@string/action_sign_in"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                </android.support.design.widget.TextInputLayout>

                <!--<Button-->
                    <!--android:id="@+id/sign_in_button"-->
                    <!--style="?android:textAppearanceSmall"-->

                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="@color/grey_0"-->
                    <!--android:layout_marginTop="2dp"-->
                    <!--android:background="@drawable/login_btn_normal"-->
                    <!--android:text="@string/action_sign_in" />-->

                <net.qiujuer.genius.widget.GeniusButton
                    android:id="@+id/sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_0"
                    android:layout_marginTop="2dp"
                    android:text="@string/action_sign_in"
                    genius:g_theme="@array/ClassicBlue"
                    genius:g_cornerRadius="10dp"
                    genius:g_delayClick="true"
                    genius:g_touchEffect="ripple"
                    genius:g_touchEffectColor="@color/material_blue_100"
                    genius:g_blockButtonEffectHeight="0dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>